Finish the declaration split and clamp the last three sites
Follow-up to ce2e561, which left a handful of sites untouched.

The remaining comma-separated locals are split: x/y in ghost and
drawPeakLabels, micV/soloV in drawCrosshair and zy/zh in drawZoneStrip,
ringLvl/ringOsc/ringFc in Engine.simulate, micOn/soloOn in AnalyzerView,
and near/far in AudioDspTest. No comma-separated declaration remains in
the tree.

The three clamps held back for safety are converted. ControlRail's
suggestedCut is the easy one — constant 3..12 bounds cannot invert, so it
becomes a direct Math.clamp.

The two label-position clamps in Draw needed more care, and are why the
follow-up exists at all. Both pin a label box's left edge between the
plot's left margin and the rightmost edge that still leaves room for the
box, and that upper bound is width - PAD_R - tw - 12: it shrinks as the
label grows and as the window narrows, so it can fall below the lower
bound. The nested Math.max/Math.min form absorbs that silently and returns
the lower bound; Math.clamp throws IllegalArgumentException. Since both
run inside the render loop, a naive conversion would throw once per frame
as soon as a label outgrew the space between the axes.

Both now go through a pinLabel helper that returns the lower bound when
the bounds invert and clamps otherwise. That reproduces the old behaviour
exactly — for hi < lo the nested form also yields lo — so the rendering is
unchanged, but the degenerate case is now named and commented instead of
being an accident of evaluation order. The two call sites read as intent
rather than arithmetic, which was the point of the original sweep.

Formatter validation is clean and 65 tests pass on JDK 25.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>